BUG - Fix nav list overlapping

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -49,6 +49,7 @@
 }
 
 .nav-list {
+  display: none;
   position: fixed;
   left: 50%;
   top: 50%;
@@ -56,7 +57,6 @@
   z-index: 1000;
 
   list-style: none;
-  display: flex;
   flex-direction: column;
 
   li {
